--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="envelope">
                         <div class="letter">
                             <div class="text">
-                                <strong style="font-size: .89rem;">Dear My Bebita,</strong>
+                                <strong style="font-size: .89rem;">Eury,</strong>
                                 <p style="text-indent: 15px;">
                                     Happy Valentine's Day my Love, Thank you for being the most incredible partner anyone could ever ask for. Your kindness, your strength, and your unwavering support mean everything to me. I love you more than words can express, today, every day and forever.
                                 </p>
@@ -97,7 +97,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebita Chiquitita</h1>
+                        <h1 class="font-extrabold text-lg">Palangga</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -117,8 +117,8 @@
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Lorenita</h1>
-                        <p class="text-base">Cutieta/Pogita/Wifeyta</p>
+                        <h1 class="font-extrabold text-5xl">I think I'm falling in love with you</h1>
+                        <p class="text-base">Eury</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -158,7 +158,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebito Chiquitito</h1>
+                        <h1 class="font-extrabold text-lg">Pangga</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -178,8 +178,8 @@
                         <img class="-rotate-12 w-full" src="icons/hisbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Marquito</h1>
-                        <p class="text-base">Cutieto/Pogito/Hubbyto</p>
+                        <h1 class="font-extrabold text-5xl">Amping Kanunay</h1>
+                        <p class="text-base">Eury</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -216,25 +216,6 @@
                 <div class="absolute -bottom-48 z-0 left-16 w-40">
                     <img class="w-full" src="https://media.tenor.com/ewJrc9fZeaQAAAAi/prots-masaj.gif" alt="">
                 </div>
-
-                <!-- DATE COUNTER -->
-                <div class="flex gap-5" id="myCountdown">
-                    <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="years" class="text-6xl font-bold">0</h1>
-                        <p class="font-bold text-xl text-red-700">Year</p>
-                    </div>
-                    <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="months" class="text-6xl font-bold">0</h1>
-                        <p class="font-bold text-xl text-red-700">Months</p>
-                    </div>
-                    <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="days" class="text-6xl font-bold">0</h1>
-                        <p class="font-bold text-xl text-red-700">Days</p>
-                    </div>
-                 
-                </div>
-                <h1 class="text-center font-bold text-base">Since October 13, 2022</h1>
-            </div>
 
 
         </div>
