--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.3/lottie_svg.min.js"></script>
-    <title>Gift for my Bebita</title>
+    <title>Langga</title>
     <link rel="icon" href="icons/tab-icon.png"/>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -59,7 +59,7 @@
                                 <p style="text-indent: 15px;">
                                     Happy Valentine's Day my Love, Thank you for being the most incredible partner anyone could ever ask for. Your kindness, your strength, and your unwavering support mean everything to me. I love you more than words can express, today, every day and forever.
                                 </p>
-                                <p class="love">I LOVE YOU SO MUCH</p>
+                                <p class="love">Gihigugma na taka!</p>
                                 <div class="pana">
                                     <img src="icons/heartarrow.svg" alt="">
                                 </div>
@@ -97,7 +97,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Palangga</h1>
+                        <h1 class="font-extrabold text-lg">Langga</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -117,7 +117,7 @@
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">I think I'm falling in love with you</h1>
+                        <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ</h1>
                         <p class="text-base">Eury</p>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Pangga</h1>
+                        <h1 class="font-extrabold text-lg">Langga</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
