--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Eury,</strong>
                                 <p style="text-indent: 15px;">
-                                    Happy Valentine's Day my Love, Thank you for being the most incredible partner anyone could ever ask for. Your kindness, your strength, and your unwavering support mean everything to me. I love you more than words can express, today, every day and forever.
+                                    Parang nagkaroon na rin ako ng feelings sayo huhu. Pafall karin kasi. Pakyu ka.
                                 </p>
                                 <p class="love">Gihigugma na taka!</p>
                                 <div class="pana">
@@ -97,7 +97,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Langga</h1>
+                        <h1 class="font-extrabold text-lg">Eury</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -118,7 +118,7 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ</h1>
-                        <p class="text-base">Eury</p>
+                        <p class="text-base">hihi</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -158,7 +158,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Langga</h1>
+                        <h1 class="font-extrabold text-lg">Eury</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">Amping Kanunay</h1>
-                        <p class="text-base">Eury</p>
+                        <p class="text-base">hihi</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
