--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">Amping Kanunay</h1>
-                        <p class="text-base">hihi</p>
+                        <p class="text-base">hihi byebye</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
