--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Eury,</strong>
                                 <p style="text-indent: 15px;">
-                                    Parang nagkaroon na rin ako ng feelings sayo huhu. Pafall karin kasi. Pakyu ka.
+                                    Parang nagkaroon na rin ako ng feelings sayo huhu (tho parang eme eme lang yung sinabi mo). Pafall karin kasi. Pakyu ka.
                                 </p>
                                 <p class="love">Gihigugma na taka!</p>
                                 <div class="pana">
