--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ</h1>
+                        <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ🤟🏼</h1>
                         <p class="text-base">hihi</p>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">Amping Kanunay</h1>
-                        <p class="text-base">hihi byebye</p>
+                        <p class="text-base">byebye hahahaha</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
