--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ🤟🏼</h1>
-                        <p class="text-base">hihi</p>
+                        <p class="text-base">Ang cute mo pu kaya madaming nagkakagusto eh</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
                 <div class="flex justify-center">
                     <div class="w-44 flex justify-center py-5 gap-3">
-                        <img class="w-40" src="img/Bebita/1.jpeg" alt="">
-                        <img class="w-40" src="img/Bebita/2.jpeg" alt="">
-                        <img class="w-40" src="img/Bebita/3.jpg" alt="">
+                        <img class="w-40" src="img/Eury1.jpg" alt="">
+                        <img class="w-40" src="img/Eury2.jpg" alt="">
+                        <img class="w-40" src="img/Eury3.jpg" alt="">
                     </div>
                 </div>
             </div>
