--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <!-- IMAGES -->
                 <div class="flex justify-center">
                     <div class="w-44 flex justify-center py-5 gap-3">
-                        <img class="w-40" src="img/Eury1.jpg" alt="">
-                        <img class="w-40" src="img/Eury2.jpg" alt="">
-                        <img class="w-40" src="img/Eury3.jpg" alt="">
+                        <img class="w-40" src="Eury1.jpg" alt="">
+                        <img class="w-40" src="Eury2.jpg" alt="">
+                        <img class="w-40" src="Eury3.jpg" alt="">
                     </div>
                 </div>
             </div>
