--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Eury</h1>
+                        <h1 class="font-extrabold text-lg">landscape and click</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -158,7 +158,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Eury</h1>
+                        <h1 class="font-extrabold text-lg">Landscape and click</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -179,15 +179,15 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">Amping Kanunay</h1>
-                        <p class="text-base">byebye hahahaha</p>
+                        <p class="text-base">eyyyy lab partner yarn hahahaha</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
                 <div class="flex justify-center">
                     <div class="w-44 flex justify-center py-5 gap-3">
-                        <img class="w-40" src="img/Bebita/1.1.jpeg" alt="">
-                        <img class="w-40 object-cover" src="img/Bebita/5.jpg" alt="">
-                        <img class="w-40 object-cover" src="img/Bebita/2.2.jpeg" alt="">
+                        <img class="w-40" src="lab1.jpeg" alt="">
+                        <img class="w-40 object-cover" src="lab2.jpg" alt="">
+                        <img class="w-40 object-cover" src="lab3.jpeg" alt="">
                     </div>
                 </div>
             </div>
