--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">ᜎᜊ᜔ᜌᜓ🤟🏼</h1>
-                        <p class="text-base">Ang cute mo pu kaya maraming nagkakagusto eh HIHIHI</p>
+                        <p class="text-base">Ang cute mo pu kaya maraming nagkakagusto eh😅</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
